feat: added the beginning of the swagger documentation, and it is now possible to create a user with email and password

--- a/frontend/views/login.ejs
+++ b/frontend/views/login.ejs
@@ -20,7 +20,7 @@
             </div>
             <div class="mb-3">
               <label>Crie sua senha:</label>
-              <input type="password" class="form-control" name="senha">
+              <input type="password" class="form-control" name="password">
             </div>
             <button type="submit" class="btn btn-primary">Criar sua conta</button>
           </form>
